# newton-fall

./: .gitignore  CMakeLists.txt  README.md  conanfile.py  install_box2d.sh  requirements.txt
.github/workflows/: build.yml  testBackend.yml
backend/: index.test.js
backend/graphql/mutations/: createScoreMutation.js  deleteUserMutation.js
backend/graphql/queries/: highScoreQuery.js  top10ScoresQuery.js
backend/graphql/rootTypes/: mutationType.js  queryType.js
backend/graphql/types/: scoreInputType.js  scoreType.js
backend/migrations/: 20241211151744-create-user.js  20250127183400-create-score.js  20250127183945-add-userId-to-scores.js
backend/models/: score.js  user.js
backend/seeders/: 20241211162947-add-fake-users.js
client/: main.go  stats.txt
client/connect/: connect.go
client/functions/: deleteUser.go  getLevels.go  highscore.go  login.go  play.go  register.go  runRL.go  top10.go
docs/: Backlog.md  C4_Diagrams.md  Features.md  Non-Functional_Requirements.md  Plan Testare GraphQL API.md  Planning.md  ProductVision.md  Requirements.md  Setup.md  UserStories.md
docs/Livrabil_Final/: monkey_test_report.md
game/: main.cpp
game/assets/: square.frag  test_background.frag  wall_fragment_shader.frag  wall_vertex_shader.vert
game/core/: Game.cpp  Game.h  GameConfig.h  LoadLevels.cpp  LoadLevels.h  RLGame.cpp  RLGame.h
game/graphics/: Background.cpp  Background.h  Camera.cpp  Camera.h
game/levels/: 0.json  1.json  2.json  3.json  4.json  level1.json
game/objects/: Ground.cpp  Ground.h  RenderableBody.cpp  RenderableBody.h  Square.cpp  Square.h  Wall.cpp  Wall.h  World.cpp  World.h
game/procedural/: PerlinNoise.cpp  PerlinNoise.h
rl/: DQN_Agent_Presentation.odp  bindings.cpp  rl.py  test.py
src/: box2d_test.cpp  main.cpp  test.cpp
